codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_delta_restores_recreated_status_indicator.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Checking files and preparing a response (0s • esc to interrupt) · 1 backgroun…"
"                                                                                "
"                                                                                "
"› Ask Shortcut to do anything                                                   "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
